--- a/style.css
+++ b/style.css
@@ -580,8 +580,12 @@ footer {
     }
 
     .headerMenu li a {
-        padding: 20px 50px ;
+        padding-top: 20px;
+        padding-bottom: 20px;
         border-bottom: 3px solid var(--background-color);
+        display: inline-block;
+        width: 100%;
+        text-align: center;
     }
 
     .headerMenu li a:hover, .headerMenu li a:focus, .headerMenu li a:active  {  
