--- a/style.css
+++ b/style.css
@@ -185,6 +185,8 @@ li {
     color: var(--black);
     font-size: 16px;
     font-family: var(--font);
+    border-radius: 0;
+    margin: 0;
 }
 
 
