--- a/style.css
+++ b/style.css
@@ -521,7 +521,8 @@ footer {
 }
 
 
-@media all and (device-width: 768px) and (max-device-width: 1024px){
+@media all and (max-width: 1024px){
+    
 
     .filters {
         display: inline;
@@ -571,7 +572,7 @@ footer {
 
 @media all and (max-device-width: 480px)
 {
-    /* Vos règles CSS pour les mobiles ici */
+    /* règles CSS pour les mobiles ici */
 
     .headerContainer {
         display: inline;
