--- a/style.css
+++ b/style.css
@@ -523,7 +523,6 @@ footer {
 
 @media all and (max-width: 1024px){
     
-
     .filters {
         display: inline;
         margin: 20px;
@@ -537,6 +536,7 @@ footer {
     .container {
         padding: 0 20px;
     }
+
     #accomodations {
         grid-template-columns: 1fr;
     }
@@ -612,7 +612,12 @@ footer {
         top: 35px;
         right: 20px; 
     }
- 
+    
+    .popular .cardContent {
+        height: 150px;
+        display: flex;
+    }
+
     .popular .cardText {
         padding: 20px 20px 15px 20px;
         font-size: 15px;
