--- a/NarjisseKabbara_3_26052021/sass/style.scss
+++ b/NarjisseKabbara_3_26052021/sass/style.scss
@@ -118,6 +118,7 @@ header {
 }
 
 .howtoCard {
+    margin: 20px;
     width: 300px;
     height: 80px;
     background: $background-color;
@@ -127,6 +128,7 @@ header {
     align-items: center;
     cursor: pointer;
     box-shadow: 5px 10px 20px 1px #b5b5b5;
+    
 }
 
 
